<resources>
    <string name="app_name">Enchante</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Random Content</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home</string>
    <string name="events_fragment">Events</string>
    <string name="wallet_fragment">Wallet</string>
    <string name="profile_fragment">Profile</string>

    <!-- Home Fragment -->
    <string name="placeholder_event_name">Abu Dhabi F1 GP grand PRIX 2021</string>
    <string name="placeholder_event_status">Happening Now</string>
    <string name="placeholder_event_location">California, USA</string>
    <string name="placeholder_event_seats">12 seats left</string>
    <string name="placeholder_event_date">22nd Dec 2021</string>
    <string name="placeholder_event_pass_type">Citizen Pass</string>
    <string name="popular_events_title">Popular events near you</string>
    <string name="based_interests_title">Based on your interest</string>
    <string name="quick_tip_title">Quick Tip</string>
    <string name="placeholder_quick_tip_title">Budget management</string>
    <string name="placeholder_quick_tip_description">AR payment lets you pay anyone with just one tap, no matter which currency</string>

    <!-- Wallet Fragment -->
    <string name="wallet_balance_title">Wallet Balance</string>
    <string name="wallet_balance_currency">Dollars</string>
    <string name="wallet_balance_description">Exclusive rewards for attending events</string>
    <string name="send_money_title">Send Money</string>
    <string name="add_funds_title">Add Funds</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="enter_amount_text">Enter Amount</string>
    <string name="back_to_wallet">Back to Wallet</string>
    <string name="pay_to">Payment to Tony</string>
</resources>