<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragments.wallet.AddFundsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.nearby.fragments.NearbyTransactionDetailsFragment">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_funds_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/neue_montreal_medium"
            android:text="@string/proceed_to_payment"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@color/primary_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wallet_balance_currency"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <EditText

            android:id="@+id/add_funds_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/neue_montreal_bold"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="44sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/enter_amount_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/add_funds_input"
            app:layout_constraintEnd_toEndOf="@+id/add_funds_input"
            app:layout_constraintStart_toStartOf="@+id/add_funds_input" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:src="@drawable/rapyd_logo"
            app:layout_constraintBottom_toTopOf="@+id/add_funds_button"
            app:layout_constraintEnd_toEndOf="@+id/add_funds_button"
            app:layout_constraintStart_toStartOf="@+id/add_funds_button" />

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/payment_pb"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/add_funds_button"
            app:layout_constraintEnd_toEndOf="@+id/add_funds_button"
            app:layout_constraintStart_toStartOf="@+id/add_funds_button"
            app:layout_constraintTop_toTopOf="@+id/add_funds_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>